@@ -18,6 +18,10 @@
 @class AtlasSpriteManager;
 @class NSDictionary;
 
+/** AtlasSprite object is an sprite that is rendered using a TextureAtlas object.
+ * In particular, the AtlasSpriteManger renders it. It supports all the basic CocosNode transformations like
+ * scale, position, rotation, visibility, etc.
+ */
 @interface AtlasSprite : CocosNode <CocosNodeSize>
 {
 	// rect point layout:
@@ -33,10 +37,7 @@
 	int mAtlasIndex;
 
 	// texture pixels
-	int mLeft;
-	int mTop;
-	int mRight;
-	int mBottom;
+	CGRect mRect;
 
 	// texture coords
 	// stored as floats in the range [0..1]
@@ -50,28 +51,27 @@
 	cpVect mRealPosition;
 }
 
+/** returns the altas index of the AtlasSprite */
 @property (readonly) int atlasIndex;
+/** returns the rect of the AtlasSprite */
+@property (readonly) CGRect textureRect;
 
-+(id)createWithSpriteManager:(AtlasSpriteManager *)manager withParameters:(NSDictionary *)parameters;
--(id)initWithSpriteManager:(AtlasSpriteManager *)manager withParameters:(NSDictionary *)parameters;
+/** creates an AtlasSprite with an AtlasSpriteManager inidicating the Rect of the Atlas */
++(id)spriteWithSpriteManager:(AtlasSpriteManager *)manager withRect:(CGRect)rect;
+/** initializes an AtlasSprite with an AtlasSpriteManager indicating the rect of the Atlas */
+-(id)initWithSpriteManager:(AtlasSpriteManager *)manager withRect:(CGRect)rect;
 
+/** updates the Quad in the TextureAtlas with it's new position, scale and rotation */
 -(void)updateAtlas;
--(void)setTextureRectLeft:(int)left top:(int)top right:(int)right bottom:(int)bottom;
--(void)setTextureRectWithParameters:(NSDictionary *)parameters;
+
+/** updates the texture rect of the AtlasSprite */
+-(void) setTextureRect:(CGRect) rect;
+
 -(void)offsetTextureRect:(cpVect)offset;
 -(void)moveTextureRect:(cpVect)pos;
 -(id)makeCopyOfSprite:(AtlasSprite *)sprite;
 
 -(cpVect)screenPosition;
--(cpVect)textureTopLeft;
--(cpVect)textureBottomRight;
-
--(float)height;
--(float)width;
--(float)scaledHeight;
--(float)scaledWidth;
--(float)scaleOffsetX;
--(float)scaleOffsetY;
 
 -(CGRect)getCGRect;
 
